mdapi/Custom/objects/Concierge__c.object
<CustomObject>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Assigned to 3rd Party Vendor</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Follow Up</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Pending Client</fullName>
                </value>
                <value>
                    <fullName>Pending IT Fix</fullName>
                </value>
                <value>
                    <fullName>Pending 3rd Party Vendor</fullName>
                </value>
                <value>
                    <fullName>Pending Deployment</fullName>
                </value>
                <value>
                    <fullName>Pending Licenses</fullName>
                </value>
                <value>
                    <fullName>Pending Equipment</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Closed - No Response</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Completed Accounting Incident</fullName>
                </value>
                <value>
                    <fullName>Completed Successfully</fullName>
                </value>
                <value>
                    <fullName>Completed Late Request</fullName>
                </value>
                <value>
                    <fullName>Rejected - Inadequate Approval</fullName>
                </value>
                <value>
                    <fullName>Rejected - Incomplete Info</fullName>
                </value>
                <value>
                    <fullName>Rejected - Incorrectly Filled Out</fullName>
                </value>
                <value>
                    <fullName>Rejected - Missing Appropriate Signature</fullName>
                </value>
                <value>
                    <fullName>Review Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_1__c</fullName>
        <description>This field is used only for the Treasury Record Type.</description>
        <label>Sub 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A/R</fullName>
                </value>
                <value>
                    <fullName>Bank Account Inquiry</fullName>
                </value>
                <value>
                    <fullName>Bank Acct Administration</fullName>
                </value>
                <value>
                    <fullName>Cashier&apos;s Check</fullName>
                </value>
                <value>
                    <fullName>Deposited Check Copy Request</fullName>
                </value>
                <value>
                    <fullName>Electronic Funds Transfer</fullName>
                </value>
                <value>
                    <fullName>Stop Pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_2__c</fullName>
        <description>This field is used only for the Treasury Record Type.</description>
        <label>Sub 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sub_1__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Modify</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Close</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <inlineHelpText>This field has a limit of 120 characters.</inlineHelpText>
        <label>Summary</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Targeted_Rollout__c</fullName>
        <formula>Related_SIR__r.Rollout__r.Name</formula>
        <inlineHelpText>This is the anticipated date on which the functionality referenced in the ticket will be released in Salesforce.</inlineHelpText>
        <label>Targeted Rollout</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Time_Life_Cycle_Hours__c</fullName>
        <formula>IF( DATEVALUE(Completed_Date__c) - DATEVALUE(Date_Time_Assigned_to_Tech__c) &lt;= 1, ((Completed_Date__c - Date_Time_Assigned_to_Tech__c)*1440)/60, 

(CASE(MOD( DATEVALUE( Date_Time_Assigned_to_Tech__c ) - DATE(1985,6,24),7), 

0 , CASE( MOD( DATEVALUE(Completed_Date__c)- DATEVALUE(Date_Time_Assigned_to_Tech__c ),7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( DATEVALUE(Completed_Date__c)- DATEVALUE(Date_Time_Assigned_to_Tech__c ),7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( DATEVALUE(Completed_Date__c)- DATEVALUE(Date_Time_Assigned_to_Tech__c ),7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( DATEVALUE(Completed_Date__c)- DATEVALUE(Date_Time_Assigned_to_Tech__c ),7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( DATEVALUE(Completed_Date__c)- DATEVALUE(Date_Time_Assigned_to_Tech__c ),7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( DATEVALUE(Completed_Date__c)- DATEVALUE(Date_Time_Assigned_to_Tech__c ),7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( DATEVALUE(Completed_Date__c)- DATEVALUE(Date_Time_Assigned_to_Tech__c ),7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( DATEVALUE(Completed_Date__c) - DATEVALUE(Date_Time_Assigned_to_Tech__c ))/7)*5))*1440/60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech Time Life Cycle (Hours)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tech_Time_Life_Cycle__c</fullName>
        <formula>IF( DATEVALUE(Completed_Date__c) - DATEVALUE(Date_Time_Assigned_to_Tech__c) &lt;= 1, ((Completed_Date__c - Date_Time_Assigned_to_Tech__c)*1440), 

(CASE(MOD( DATEVALUE( Date_Time_Assigned_to_Tech__c ) - DATE(1985,6,24),7), 

0 , CASE( MOD( DATEVALUE(Completed_Date__c)- DATEVALUE(Date_Time_Assigned_to_Tech__c ),7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( DATEVALUE(Completed_Date__c)- DATEVALUE(Date_Time_Assigned_to_Tech__c ),7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( DATEVALUE(Completed_Date__c)- DATEVALUE(Date_Time_Assigned_to_Tech__c ),7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( DATEVALUE(Completed_Date__c)- DATEVALUE(Date_Time_Assigned_to_Tech__c ),7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( DATEVALUE(Completed_Date__c)- DATEVALUE(Date_Time_Assigned_to_Tech__c ),7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( DATEVALUE(Completed_Date__c)- DATEVALUE(Date_Time_Assigned_to_Tech__c ),7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( DATEVALUE(Completed_Date__c)- DATEVALUE(Date_Time_Assigned_to_Tech__c ),7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( DATEVALUE(Completed_Date__c) - DATEVALUE(Date_Time_Assigned_to_Tech__c ))/7)*5))*1440)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech Time Life Cycle (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Technician_is_Assigned__c</fullName>
        <formula>IF($User.Alias  =  Owner:User.Alias , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <label>Technician is Assigned</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Has_Been_Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ticket Has Been Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Open__c</fullName>
        <description>FLOOR rounds down to the nearest integer.  This formula excludes weekends.  One day equals 1,440 minutes (24*60).  Dividing by 60 converts it back to days.</description>
        <formula>IF(TEXT(Status__c) &lt;&gt; &apos;Closed&apos;, 

IF( DATEVALUE(NOW()) - DATEVALUE(CreatedDate) &lt;= 1, ((NOW() - CreatedDate)*1440)/60, 

(CASE(MOD( DATEVALUE( CreatedDate ) - DATE(1985,6,24),7), 

0 , CASE( MOD( DATEVALUE(NOW())- DATEVALUE(CreatedDate),7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( DATEVALUE(NOW())- DATEVALUE(CreatedDate),7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( DATEVALUE(NOW())- DATEVALUE(CreatedDate),7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( DATEVALUE(NOW())- DATEVALUE(CreatedDate),7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( DATEVALUE(NOW())- DATEVALUE(CreatedDate),7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( DATEVALUE(NOW())- DATEVALUE(CreatedDate),7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( DATEVALUE(NOW())- DATEVALUE(CreatedDate),7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( DATEVALUE(NOW()) - DATEVALUE(CreatedDate))/7)*5))*1440/60), 


IF( DATEVALUE(Closed_Date__c) - DATEVALUE(CreatedDate) &lt;= 1, ((Closed_Date__c - CreatedDate)*1440)/60, 

(CASE(MOD( DATEVALUE( CreatedDate ) - DATE(1985,6,24),7), 

0 , CASE( MOD( DATEVALUE(Closed_Date__c)- DATEVALUE(CreatedDate),7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( DATEVALUE(Closed_Date__c)- DATEVALUE(CreatedDate),7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( DATEVALUE(Closed_Date__c)- DATEVALUE(CreatedDate),7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( DATEVALUE(Closed_Date__c)- DATEVALUE(CreatedDate),7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( DATEVALUE(Closed_Date__c)- DATEVALUE(CreatedDate),7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( DATEVALUE(Closed_Date__c)- DATEVALUE(CreatedDate),7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( DATEVALUE(Closed_Date__c)- DATEVALUE(CreatedDate),7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( DATEVALUE(Closed_Date__c) - DATEVALUE(CreatedDate))/7)*5))*1440/60))</formula>
        <label>Time Open (Hours)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Issue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Training Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Treasury_Queue_Email__c</fullName>
        <defaultValue>&quot;Treasury@invitationhomes.com&quot;</defaultValue>
        <description>This field is referenced in the Workflow Rule, &quot;Treasury Request - Email Treasury Queue When Ticket is Created&quot;.</description>
        <label>Treasury Queue Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Upgrade_Issue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upgrade Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <inlineHelpText>Username is required only for issues related to access to ePM</inlineHelpText>
        <label>ePM Username</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Requested_Ticket__c</fullName>
        <formula>IF(  $User.Full_Name__c   =   Requester_Name__c , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <label>User Requested Ticket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_of_Operations_Queue_Member__c</fullName>
        <description>This field is used in Concierge list views used for VP of Operations tickets.</description>
        <formula>IF( $Profile.Name   = &apos;System Administrator&apos;, True,
IF( $Profile.Name   = &apos;SFDC Business Partner&apos;, True,
IF( $UserRole.Name  = &apos;Executive-Corporate&apos;, True, 
IF( (   $User.Full_Name__c = &apos;David Sampson&apos; )  &amp;&amp;
 (OR( ISPICKVAL( Region__c , &apos;Phoenix&apos;) , ISPICKVAL(Region__c , &apos;Las Vegas&apos;)))  , True, 
IF( TEXT( $User.Region__c ) =  TEXT( Region__c )   &amp;&amp;     $User.VP_of_Operations__c  = True , True, False))) ))</formula>
        <inlineHelpText>This field is used in Concierge list views used for VP of Operations tickets.</inlineHelpText>
        <label>VP of Operations Queue Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_ID__c</fullName>
        <inlineHelpText>IRN number OR Invoice number and Vendor ID is required for issues related to invoice processing. If multiple IRNs were affected, please list all IRN numbers in the Detailed Description field below</inlineHelpText>
        <label>Vendor ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>RENTCafe</fullName>
                </value>
                <value>
                    <fullName>Yardi</fullName>
                </value>
                <value>
                    <fullName>Nitro</fullName>
                </value>
                <value>
                    <fullName>Gelb</fullName>
                </value>
                <value>
                    <fullName>Cash Management</fullName>
                </value>
                <value>
                    <fullName>Datamatics</fullName>
                </value>
                <value>
                    <fullName>Conservice</fullName>
                </value>
                <value>
                    <fullName>On-Site</fullName>
                </value>
                <value>
                    <fullName>Zillow</fullName>
                </value>
                <value>
                    <fullName>DocuSign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Web_Form_Attachment__c</fullName>
        <label>Web Form - Attachment</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Web_Form_Yardi_Cash_Mgmt_Pmt_Process__c</fullName>
        <label>Web Form - Yardi Cash Mgmt &amp; Pmt Process</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Form_Yardi_Data_Changes__c</fullName>
        <label>Web Form - Yardi Data Changes</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Form_Yardi_Leasing_Process__c</fullName>
        <label>Web Form - Yardi Leasing Process</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Form_Yardi_Maintenance__c</fullName>
        <label>Web Form - Yardi Maintenance</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Form_Yardi_Rent_Cafe__c</fullName>
        <label>Web Form - Yardi Rent Cafe</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Form_Yardi_Reporting__c</fullName>
        <label>Web Form - Yardi Reporting</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Form_Yardi_Resident__c</fullName>
        <label>Web Form - Yardi Resident</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Form_Yardi_Support_Issue__c</fullName>
        <label>Web Form - Yardi Support Issue</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Form_Yardi_System_Enhancements__c</fullName>
        <label>Web Form - Yardi System Enhancements</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Form_Yardi_User_Access__c</fullName>
        <label>Web Form - Yardi User Access</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Form_Yardi_User_Administration__c</fullName>
        <label>Web Form - Yardi User Administration</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Submission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Web Submission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Working_Notes_Internal_Support_Team__c</fullName>
        <inlineHelpText>Only the Internal Support Team can view this field</inlineHelpText>
        <label>Working Notes (Internal Support Team)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Yardi_Alerts_Email__c</fullName>
        <defaultValue>&apos;YardiAlerts@invitationhomes.com&apos;</defaultValue>
        <label>Yardi Alerts Email</label>
        <type>Email</type>
    </fields>
    <label>Concierge</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Region__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Request_Area__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Request_Specifics__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Status__c</columns>
        <columns>Requestor_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Atlanta</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Request_Type__c</field>
            <operation>equals</operation>
            <value>Cash Mgmt. &amp; Pmt. Process</value>
        </filters>
        <label>ATL* Zero Receipt</label>
    </listViews>
    <listViews>
        <fullName>All4</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Region__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Request_Area__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Request_Specifics__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Status__c</columns>
        <columns>Requestor_Name__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Requestor_Name__c</field>
            <operation>equals</operation>
            <value>Robert Brown</value>
        </filters>
        <label>All</label>
        <sharedTo>
            <group>IT_External_Support_Real_Page</group>
            <group>IT_Support_Concierge_Internal</group>
            <group>RF_Support</group>
            <group>SFDC_DEV_Support</group>
            <group>System_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Phoenix</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Region__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Request_Area__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Request_Specifics__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Status__c</columns>
        <columns>Requestor_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Phoenix</value>
        </filters>
        <label>All - Phoenix</label>
        <sharedTo>
            <group>IT_External_Support_Real_Page</group>
            <group>IT_Support_Concierge_Internal</group>
            <group>RF_Support</group>
            <group>SFDC_DEV_Support</group>
            <group>System_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Phoenix_Mine</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Region__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Request_Area__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Request_Specifics__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Status__c</columns>
        <columns>Requestor_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Phoenix</value>
        </filters>
        <filters>
            <field>Requestor_Name__c</field>
            <operation>equals</operation>
            <value>Walter Reidy</value>
        </filters>
        <label>All - Phoenix - Mine</label>
        <sharedTo>
            <group>IT_External_Support_Real_Page</group>
            <group>IT_Support_Concierge_Internal</group>
            <group>RF_Support</group>
            <group>SFDC_DEV_Support</group>
            <group>System_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Datamatics_Invoice_Processing</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Summary__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Requestor_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Concierge__c.Datamatics_Request</value>
        </filters>
        <filters>
            <field>Request_Area__c</field>
            <operation>equals</operation>
            <value>ePM ( Invoice processing )</value>
        </filters>
        <label>Datamatics Invoice Processing</label>
        <sharedTo>
            <group>Datamatics_Support</group>
            <group>Datamatics_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Datamatics_Technical_Issues</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Summary__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Requestor_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Concierge__c.Datamatics_Request</value>
        </filters>
        <filters>
            <field>Request_Area__c</field>
            <operation>equals</operation>
            <value>ePM -Technical</value>
        </filters>
        <label>Datamatics Technical Issues</label>
        <sharedTo>
            <group>Datamatics_Support</group>
            <group>Datamatics_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Jaki_s_IT_Requests_ALL</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Request_Type__c</columns>
        <columns>Time_Open__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Status__c</columns>
        <columns>Requester_Name__c</columns>
        <columns>Requestor_Name__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Concierge__c.IT_Request</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>jingr</value>
        </filters>
        <label>Jaki&apos;s IT Requests - ALL</label>
        <sharedTo>
            <group>Jaki_Ingram_s_Queue</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Jaki_s_IT_Requests_ALL1</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Request_Type__c</columns>
        <columns>Time_Open__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Status__c</columns>
        <columns>Requester_Name__c</columns>
        <columns>Requestor_Name__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Concierge__c.IT_Request</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>jingr</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Jaki&apos;s IT Requests - Open</label>
        <sharedTo>
            <group>Jaki_Ingram_s_Queue</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Justin_s_IT_Requests_Open</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Request_Type__c</columns>
        <columns>Time_Open__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Status__c</columns>
        <columns>Requester_Name__c</columns>
        <columns>Requestor_Name__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Concierge__c.IT_Request</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>jself</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Justin&apos;s IT Requests - Open</label>
        <sharedTo>
            <group>Jaki_Ingram_s_Queue</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Last_2_Days</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Last_Modified_Date_SF_Admin__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Resolution_Details__c</columns>
        <columns>Rent_Issue__c</columns>
        <columns>Related_SIR__c</columns>
        <columns>Related_SIR_Status__c</columns>
        <columns>Working_Notes_Internal_Support_Team__c</columns>
        <columns>Is_VIP__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Closed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:2</value>
        </filters>
        <filters>
            <field>Closed_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:2</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Concierge__c.SF_Request</value>
        </filters>
        <label>SF Tickets Last 2 Days</label>
        <sharedTo>
            <group>SF_Support</group>
            <group>System_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Closed_Assigned_Tickets</fullName>
        <booleanFilter>(1  OR 3 OR  4 )AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Closed_Date__c</columns>
        <columns>Time_Open__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Requestor_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Resolution_Details__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Technician_is_Assigned__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected - Inadequate Approval,Rejected - Incomplete Info</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected - Incorrectly Filled Out,Rejected - Missing Appropriate Signature</value>
        </filters>
        <label>My Assigned Closed Tickets</label>
        <sharedTo>
            <group>RF_Support</group>
            <role>Executive</role>
            <role>Executive_Atlanta</role>
            <role>Executive_Charlotte</role>
            <role>Executive_Chicago</role>
            <role>Executive_Inland_Empire</role>
            <role>Executive_Jacksonville</role>
            <role>Executive_LA_County</role>
            <role>Executive_Las_Vegas</role>
            <role>Executive_Miami</role>
            <role>Executive_Orlando</role>
            <role>Executive_Phoenix</role>
            <role>Executive_Sacramento</role>
            <role>Executive_Seattle</role>
            <role>Executive_Southern_California</role>
            <role>Executive_Tampa</role>
            <role>Team_Member_Atlanta</role>
            <role>Team_Member_California</role>
            <role>Team_Member_Charlotte</role>
            <role>Team_Member_Chicago</role>
            <role>Team_Member_Inland_Empire</role>
            <role>Team_Member_Jacksonville</role>
            <role>Team_Member_LA_County</role>
            <role>Team_Member_Las_Vegas</role>
            <role>Team_Member_Miami</role>
            <role>Team_Member_Orlando</role>
            <role>Team_Member_Phoenix</role>
            <role>Team_Member_Sacramento</role>
            <role>Team_Member_Seattle</role>
            <role>Team_Member_Tampa</role>
            <role>X3rd_Party_Atlanta</role>
            <role>X3rd_Party_Charlotte</role>
            <role>X3rd_Party_Chicago</role>
            <role>X3rd_Party_Corporate</role>
            <role>X3rd_Party_Inland_Empire</role>
            <role>X3rd_Party_Jacksonville</role>
            <role>X3rd_Party_LA_County</role>
            <role>X3rd_Party_Las_Vegas</role>
            <role>X3rd_Party_Miami</role>
            <role>X3rd_Party_Orlando</role>
            <role>X3rd_Party_Phoenix</role>
            <role>X3rd_Party_Sacramento</role>
            <role>X3rd_Party_Seattle</role>
            <role>X3rd_Party_Southern_California</role>
            <role>X3rd_Party_Tampa</role>
        </sharedTo>
    </listViews>
</CustomObject>